--- a/index.html
+++ b/index.html
@@ -781,11 +781,6 @@
     };
 
     async function afficherMarqueursGoogleMap() {
-        // Ensure Google Maps API is fully loaded before proceeding
-        if (!window.google || !window.google.maps) {
-            console.warn('Google Maps API not yet loaded');
-            return;
-        }
         const articles = await chargerFichesFromJSON();
         const map = new google.maps.Map(document.getElementById('map'), {
             center: { lat: 52.1, lng: 5.2 },
@@ -806,7 +801,7 @@
             const coords = villesNL[ville];
             if (coords) {
                 const articlesVille = articlesParVille[ville];
-                const marker = new google.maps.marker.AdvancedMarkerElement({
+                const marker = new google.maps.Marker({
                     position: coords,
                     map: map,
                     title: `${ville} (${articlesVille.length} article${articlesVille.length > 1 ? 's' : ''})`
@@ -832,14 +827,13 @@
     window.onload = function() {
         updateNavbar();
         afficherFichesRecentes();
-        // Wait for Google Maps API to load with async
-        if (window.google && window.google.maps) {
-            afficherMarqueursGoogleMap();
-        } else {
-            window.addEventListener('load', afficherMarqueursGoogleMap);
-        }
+    };
+
+    // Callback function when Google Maps API is loaded
+    window.afficherMarqueursGoogleMapReady = function() {
+        afficherMarqueursGoogleMap();
     };
 </script>
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js"></script>
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js&callback=afficherMarqueursGoogleMapReady"></script>
 </body>
 </html>
