async pour google map

--- a/index.html
+++ b/index.html
@@ -835,6 +835,6 @@
         afficherMarqueursGoogleMap();
     };
 </script>
-<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js&callback=afficherMarqueursGoogleMapReady&libraries=marker"></script>
+<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js&loading=async&callback=afficherMarqueursGoogleMapReady&libraries=marker"></script>
 </body>
 </html>
