Ajout test pour l'ordre des mots.

--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@
             <div class="dropdown">
                 <button class="navbar-link dropdown-toggle">📖 Exercices ▼</button>
                 <div class="dropdown-menu">
+                    <a href="jeu_mots_melanges.html" class="dropdown-item">🎮 Jeu des Mots Mélangés</a>
                     <a href="revision_heures.html" class="dropdown-item">Révision heures</a>
                     <a href="revision_vocabulaire.html" class="dropdown-item">Révision vocabulaire</a>
                     <a href="revision_irregulier_verbes.html" class="dropdown-item">Verbes irréguliers</a>
