--- a/index.html
+++ b/index.html
@@ -529,6 +529,12 @@
         <h1>📚 FR/NL</h1>
         <div class="navbar-buttons">
             <div class="dropdown">
+                <button class="navbar-link dropdown-toggle">🌍 Culture ▼</button>
+                <div class="dropdown-menu">
+                    <!-- À compléter plus tard -->
+                </div>
+            </div>
+            <div class="dropdown">
                 <button class="navbar-link dropdown-toggle">📖 Exercices ▼</button>
                 <div class="dropdown-menu">
                     <a href="jeu_mots_melanges.html" class="dropdown-item">🎮 Jeu des Mots Mélangés</a>
