--- a/culture/15miljoenmensen.html
+++ b/culture/15miljoenmensen.html
@@ -200,6 +200,25 @@
       </div>
     </div>
 
+    <!-- Section Traduction Collapsible -->
+    <div class="collapsible-section">
+      <div class="collapsible-header" onclick="toggleCollapsible(this)">
+        <span>🇫🇷 Traduction en français</span>
+        <span class="collapsible-icon">▼</span>
+      </div>
+      <div class="collapsible-content">
+        <p><strong>Un pays aux mille opinions.</strong> Un pays de sobriété où tout le monde se retrouve à la plage, avec des biscottes au petit-déjeuner. Un pays où personne ne s'abandonne. Sauf quand nous gagnons, alors la passion se déchaîne. Alors plus personne ne reste enfermé. Un pays allergique au paternalisme. Aucun uniforme n'est sacré. Un fils qui appelle son père par son prénom. Un vélo n'est jamais en sécurité nulle part.</p>
+
+        <p><strong>15 millions de personnes</strong> sur ce tout petit bout de terre. Vous vous inscrivez dans les lois. Vous vous laissez apprécier à votre juste valeur. 15 millions de personnes sur ce tout petit bout de terre. Qui ne doivent pas rentrer dans un carcan. Qui se laissent apprécier à leur juste valeur.</p>
+
+        <p>Un pays plein de groupes de protestation. Aucun chef qui soit vraiment le patron. Les rideaux toujours ouverts. Un sandwich au fromage, c'est le repas typique. C'est un pays plein de tolérance. Sauf peut-être avec le voisin. Une grande question qui persiste toujours. D'où tire-t-il ses revenus ? Un pays qui prend soin de chacun. Personne ne sait ce qu'est un grand. Avec des balles de mouches dans les murs et personne qui ne mange du pain sec.</p>
+
+        <p><strong>15 millions de personnes</strong> sur ce tout petit bout de terre. Vous ne vous inscrivez pas dans les lois. Vous vous laissez apprécier à votre juste valeur. 15 millions de personnes sur ce tout petit bout de terre qui ne doivent pas rentrer dans un carcan qui se laissent apprécier à leur juste valeur.</p>
+
+        <p><strong>15 millions de personnes</strong> sur ce tout petit bout de terre. Vous ne vous inscrivez pas dans les lois. Vous vous laissez apprécier à votre juste valeur. 15 millions de personnes sur ce tout petit bout de terre qui ne doivent pas rentrer dans un carcan. Qui se laissent apprécier à leur juste valeur.</p>
+      </div>
+    </div>
+
     <!-- Section Vocabulaire Collapsible -->
     <div class="collapsible-section">
       <div class="collapsible-header" onclick="toggleCollapsible(this)">
