--- a/culture/15miljoenmensen.html
+++ b/culture/15miljoenmensen.html
@@ -185,9 +185,9 @@
     <div class="collapsible-section">
       <div class="collapsible-header" onclick="toggleCollapsible(this)">
         <span>📝 Transcription</span>
-        <span class="collapsible-icon">▼</span>
+        <span class="collapsible-icon collapsed">▼</span>
       </div>
-      <div class="collapsible-content">
+      <div class="collapsible-content collapsed">
         <p><strong>Land van 1000 meningen.</strong> Het land van nuchterheid met zijn allen op het strand beschuit bij het ontbijt. Het land waar niemand zich laat gaan. Behalve als we winnen, dan breekt acu de passie los. Dan blijft geen mens meer binnen. Het land wars van betutteling. Geen uniform is heilig. Een zoon die noemt zijn vader Piet. Een fiets staat nergens veilig.</p>
 
         <p><strong>15 miljoen mensen</strong> op dat hele kleine stukje aarde. Je schrijf je in de wetten voor. Je laat je in een waarde. 15 miljoen mensen op het hele kleine stukje aarde. Die moeten niet het keurslijf in. Uwatje in hun waarde.</p>
@@ -204,9 +204,9 @@
     <div class="collapsible-section">
       <div class="collapsible-header" onclick="toggleCollapsible(this)">
         <span>🇫🇷 Traduction en français</span>
-        <span class="collapsible-icon">▼</span>
+        <span class="collapsible-icon collapsed">▼</span>
       </div>
-      <div class="collapsible-content">
+      <div class="collapsible-content collapsed">
         <p><strong>Un pays aux mille opinions.</strong> Un pays de sobriété où tout le monde se retrouve à la plage, avec des biscottes au petit-déjeuner. Un pays où personne ne s'abandonne. Sauf quand nous gagnons, alors la passion se déchaîne. Alors plus personne ne reste enfermé. Un pays allergique au paternalisme. Aucun uniforme n'est sacré. Un fils qui appelle son père par son prénom. Un vélo n'est jamais en sécurité nulle part.</p>
 
         <p><strong>15 millions de personnes</strong> sur ce tout petit bout de terre. Vous vous inscrivez dans les lois. Vous vous laissez apprécier à votre juste valeur. 15 millions de personnes sur ce tout petit bout de terre. Qui ne doivent pas rentrer dans un carcan. Qui se laissent apprécier à leur juste valeur.</p>
@@ -223,9 +223,9 @@
     <div class="collapsible-section">
       <div class="collapsible-header" onclick="toggleCollapsible(this)">
         <span>📚 Vocabulaire - Expressions culturelles clés</span>
-        <span class="collapsible-icon">▼</span>
+        <span class="collapsible-icon collapsed">▼</span>
       </div>
-      <div class="collapsible-content">
+      <div class="collapsible-content collapsed">
         <p style="font-style: italic; color: #666;">Cliquez sur 🔊 pour écouter la prononciation</p>
         <table class="fiche-table">
           <thead>
