--- a/index.html
+++ b/index.html
@@ -526,7 +526,10 @@
 <!-- Navbar -->
 <nav class="navbar">
     <div class="navbar-content">
-        <h1>📚 FR/NL</h1>
+        <div style="display: flex; align-items: center; gap: 15px;">
+            <h1>📚 Néerlandais A1</h1>
+            <span style="font-size: 0.75em; color: #999; opacity: 0.7;">Créé par Joachim NAUS</span>
+        </div>
         <div class="navbar-buttons">
             <div class="dropdown">
                 <button class="navbar-link dropdown-toggle">🌍 Culture ▼</button>
@@ -561,8 +564,13 @@
 </nav>
 
 <div class="container">
-    <h1 style="margin-top: 0;">FR/NL korte nieuwsartikelen</h1>
-    <p class="subtitle">Nieuws in het Nederlands voor Franstaligen (A1)</p>
+    <div style="display: flex; justify-content: space-between; align-items: baseline; margin-top: 0;">
+        <div>
+            <h1 style="margin: 0;">Néerlandais A1 - Articles d'actualité</h1>
+            <p class="subtitle">Nieuws in het Nederlands voor Franstaligen (A1)</p>
+        </div>
+        <span style="font-size: 0.8em; color: #999;">Plateforme technique par Pierre Laurent</span>
+    </div>
 
     <!-- Section Fiches Récentes -->
     <div class="section">
