--- a/index.html
+++ b/index.html
@@ -526,9 +526,9 @@
 <!-- Navbar -->
 <nav class="navbar">
     <div class="navbar-content">
-        <div style="display: flex; align-items: center; gap: 15px;">
+        <div style="display: flex; align-items: center; gap: 20px;">
             <h1>📚 Néerlandais A1</h1>
-            <span style="font-size: 0.75em; color: #999; opacity: 0.7;">Créé par Joachim NAUS</span>
+            <span style="font-size: 0.9em; color: #666;">Par <strong>Joachim NAUS</strong> <span style="color: #ccc; font-size: 0.8em; font-weight: normal;"> & Pierre Laurent (tech)</span></span>
         </div>
         <div class="navbar-buttons">
             <div class="dropdown">
@@ -564,13 +564,8 @@
 </nav>
 
 <div class="container">
-    <div style="display: flex; justify-content: space-between; align-items: baseline; margin-top: 0;">
-        <div>
-            <h1 style="margin: 0;">Néerlandais A1 - Articles d'actualité</h1>
-            <p class="subtitle">Nieuws in het Nederlands voor Franstaligen (A1)</p>
-        </div>
-        <span style="font-size: 0.8em; color: #999;">Plateforme technique par Pierre Laurent</span>
-    </div>
+    <h1 style="margin-top: 0;">Néerlandais A1 - Articles d'actualité</h1>
+    <p class="subtitle">Nieuws in het Nederlands voor Franstaligen (A1)</p>
 
     <!-- Section Fiches Récentes -->
     <div class="section">
