--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
     <div class="navbar-content">
         <div style="display: flex; align-items: center; gap: 20px;">
             <h1>📚 Néerlandais A1</h1>
-            <span style="font-size: 0.9em; color: #666;">Par <strong>Joachim NAUS</strong> <span style="color: #ccc; font-size: 0.8em; font-weight: normal;"> & Pierre Laurent (tech)</span></span>
+            <span style="font-size: 0.9em; color: #666;">Par <strong>Joachim NAUS</strong></span>
         </div>
         <div class="navbar-buttons">
             <div class="dropdown">
