--- a/index.html
+++ b/index.html
@@ -528,7 +528,9 @@
     <div class="navbar-content">
         <div style="display: flex; align-items: center; gap: 20px;">
             <h1>📚 Néerlandais A1</h1>
-            <span style="font-size: 0.9em; color: #666;">Par <strong>Joachim NAUS</strong></span>
+            <span style="font-size: 0.9em; color: #666; display: flex; align-items: center; gap: 8px;">
+                Door <strong style="background: linear-gradient(90deg, #AE1C28 0%, #FFFFFF 50%, #21468B 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 1.1em;">🇳🇱 Jo NAUS</strong>
+            </span>
         </div>
         <div class="navbar-buttons">
             <div class="dropdown">
