--- a/index.html
+++ b/index.html
@@ -529,7 +529,9 @@
         <div style="display: flex; align-items: center; gap: 20px;">
             <h1>📚 Néerlandais A1</h1>
             <span style="font-size: 0.9em; color: #666; display: flex; align-items: center; gap: 8px;">
-                Door <strong style="background: linear-gradient(90deg, #AE1C28 0%, #FFFFFF 50%, #21468B 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-size: 1.1em;">🇳🇱 Jo NAUS</strong>
+                Door <strong style="background: rgba(174, 28, 40, 0.1); padding: 4px 10px; border-radius: 6px; font-size: 1.05em; position: relative;">
+                    🇳🇱 Jo NAUS
+                </strong>
             </span>
         </div>
         <div class="navbar-buttons">
