--- a/index.html
+++ b/index.html
@@ -526,13 +526,11 @@
 <!-- Navbar -->
 <nav class="navbar">
     <div class="navbar-content">
-        <div style="display: flex; align-items: center; gap: 20px;">
+        <div style="display: flex; align-items: center; gap: 15px;">
             <h1>📚 Néerlandais A1</h1>
-            <span style="font-size: 0.9em; color: #666; display: flex; align-items: center; gap: 8px;">
-                Door <strong style="background: rgba(174, 28, 40, 0.1); padding: 4px 10px; border-radius: 6px; font-size: 1.05em; position: relative;">
-                    🇳🇱 Jo NAUS
-                </strong>
-            </span>
+            <strong style="background: rgba(218, 165, 32, 0.15); padding: 6px 12px; border-radius: 6px; font-size: 1.1em; color: #DAA520; display: flex; align-items: center; gap: 6px; line-height: 1; margin-top: -5px;">
+                🇳🇱 Jo NAUS
+            </strong>
         </div>
         <div class="navbar-buttons">
             <div class="dropdown">
