--- a/index.html
+++ b/index.html
@@ -847,6 +847,7 @@
         afficherMarqueursGoogleMap();
     };
 </script>
-<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js&loading=async&callback=afficherMarqueursGoogleMapReady&libraries=marker"></script>
+<!-- Ancienne clef: AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js -->
+<script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTL60IzPu_-BMYWtipXZ1hqs1FppKiO3U&loading=async&callback=afficherMarqueursGoogleMapReady&libraries=marker"></script>
 </body>
 </html>
