--- a/revision_positions.html
+++ b/revision_positions.html
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css?v=1.0.0">
     <script src="version.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js"></script>
+    <!-- Ancienne clef: AIzaSyDYnaelzF3AanXmOGDG8j9kv3GyETYf1Js -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTL60IzPu_-BMYWtipXZ1hqs1FppKiO3U"></script>
     <style>
         /* BOUTON DE RETOUR */
         .back-btn {
