--- a/index.html
+++ b/index.html
@@ -565,6 +565,31 @@
     </div>
 </nav>
 
+<!-- Bandeau mobile pour les boutons -->
+<div class="mobile-buttons-bar">
+    <div class="dropdown" style="flex: 1;">
+        <button class="mobile-menu-button dropdown-toggle">🌍 Culture ▼</button>
+        <div class="dropdown-menu">
+            <a href="culture/15miljoenmensen.html" class="dropdown-item">🎬 15 Miljoen Mensen</a>
+        </div>
+    </div>
+    <div class="dropdown" style="flex: 1;">
+        <button class="mobile-menu-button dropdown-toggle">📖 Exercices ▼</button>
+        <div class="dropdown-menu">
+            <a href="jeu_mots_melanges.html" class="dropdown-item">🎮 Jeu des Mots Mélangés</a>
+            <a href="revision_heures.html" class="dropdown-item">Révision heures</a>
+            <a href="revision_vocabulaire.html" class="dropdown-item">Révision vocabulaire</a>
+            <a href="revision_irregulier_verbes.html" class="dropdown-item">Verbes irréguliers</a>
+            <a href="revision_regulier_verbes.html" class="dropdown-item">Verbes réguliers</a>
+            <a href="revision_positions.html" class="dropdown-item">Positions spatiales</a>
+            <a href="revision_prepositions_spatiales.html" class="dropdown-item">🗺️ Prépositions spatiales</a>
+            <a href="visualiseur_verbes.html" class="dropdown-item">Tous les verbes</a>
+        </div>
+    </div>
+    <a href="admin.html" class="mobile-menu-button" id="loginBtnMobile" style="flex: 1;">🔐 Connexion</a>
+    <a href="admin.html" class="mobile-menu-button admin" id="adminLinkMobile" style="display: none; flex: 1;">⚙️ Admin</a>
+</div>
+
 <div class="container">
     <h1 style="margin-top: 0;">Néerlandais A1 - Articles d'actualité</h1>
     <p class="subtitle">Nieuws in het Nederlands voor Franstaligen (A1)</p>
@@ -759,17 +784,29 @@
         const logoutBtn = document.getElementById('logoutBtn');
         const userEmailSpan = document.getElementById('userEmail');
 
+        // Buttons mobiles
+        const adminLinkMobile = document.getElementById('adminLinkMobile');
+        const loginBtnMobile = document.getElementById('loginBtnMobile');
+
         if (userEmail) {
             loginBtn.style.display = 'none';
             adminLink.style.display = 'inline-block';
             userDisplay.style.display = 'block';
             logoutBtn.style.display = 'inline-block';
             userEmailSpan.textContent = userEmail;
+
+            // Mettre à jour les boutons mobiles
+            loginBtnMobile.style.display = 'none';
+            adminLinkMobile.style.display = 'inline-block';
         } else {
             loginBtn.style.display = 'inline-block';
             adminLink.style.display = 'none';
             userDisplay.style.display = 'none';
             logoutBtn.style.display = 'none';
+
+            // Mettre à jour les boutons mobiles
+            loginBtnMobile.style.display = 'inline-block';
+            adminLinkMobile.style.display = 'none';
         }
     }
 
