--- a/index.html
+++ b/index.html
@@ -531,6 +531,7 @@
             <button class="hamburger-btn" id="hamburgerBtn">☰</button>
             <div class="mobile-menu" id="mobileMenu">
                 <a href="culture/15miljoenmensen.html" class="mobile-menu-item">🌍 Culture - 15 Miljoen Mensen</a>
+                <a href="culture/Nederland_zonder_dijken.html" class="mobile-menu-item">🌍 Culture - Hoe zou Nederland eruit zien zonder dijken?</a>
                 <hr style="border: none; border-top: 1px solid #ddd; margin: 8px 0;">
                 <a href="jeu_mots_melanges.html" class="mobile-menu-item">🎮 Jeu des Mots Mélangés</a>
                 <a href="revision_heures.html" class="mobile-menu-item">⏰ Révision heures</a>
@@ -557,6 +558,7 @@
                 <button class="navbar-link dropdown-toggle">🌍 Culture ▼</button>
                 <div class="dropdown-menu">
                     <a href="culture/15miljoenmensen.html" class="dropdown-item">🎬 15 Miljoen Mensen</a>
+                    <a href="culture/Nederland_zonder_dijken.html" class="dropdown-item">🎬 Hoe zou Nederland eruit zien zonder dijken?</a>
                 </div>
             </div>
             <div class="dropdown">
