--- a/culture/Nederland_zonder_dijken.html
+++ b/culture/Nederland_zonder_dijken.html
@@ -158,6 +158,125 @@
   .collapsible-icon.collapsed {
     transform: rotate(-90deg);
   }
+
+  .images-gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    margin: 20px 0;
+  }
+
+  .image-card {
+    position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    background: #f0f0f0;
+    cursor: pointer;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  }
+
+  .image-card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+  }
+
+  .image-card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    display: block;
+  }
+
+  .image-overlay {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px;
+    text-align: center;
+    font-size: 0.9em;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  .image-card:hover .image-overlay {
+    opacity: 1;
+  }
+
+  .modal-image {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.95);
+  }
+
+  .modal-image.active {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .modal-content-image {
+    position: relative;
+    max-width: 90vw;
+    max-height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .modal-content-image img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
+
+  .close-modal-image {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    color: white;
+    font-size: 2.5em;
+    font-weight: bold;
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 10px 20px;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .close-modal-image:hover {
+    background: rgba(0, 0, 0, 0.8);
+  }
+
+  .fullscreen-btn {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.9em;
+    z-index: 10;
+  }
+
+  .fullscreen-btn:hover {
+    background: rgba(0, 0, 0, 0.9);
+  }
 </style>
 </head>
 <body>
@@ -179,6 +298,22 @@
 
     <div style="background: #e7f3ff; padding: 15px; border-radius: 8px; margin: 20px 0; border-left: 4px solid #3B82F6;">
       <p style="margin: 0;"><strong>💡 Conseil :</strong> Les sous-titres sont activés par défaut. Si vous ne les voyez pas, cliquez sur l'icône CC (sous-titres) en bas à droite de la vidéo, ou appuyez sur C pour les afficher.</p>
+    </div>
+
+    <!-- Galerie d'images -->
+    <div style="background: #fff3cd; padding: 15px; border-radius: 8px; margin: 20px 0; border-left: 4px solid #FFA500;">
+      <p style="margin: 0;"><strong>📸 Images :</strong> Cliquez sur une image pour la voir en plein écran et mieux comprendre la géographie des Pays-Bas.</p>
+    </div>
+
+    <div class="images-gallery">
+      <div class="image-card" onclick="openImageModal('The_Netherlands_compared_to_sealevel.png')">
+        <img src="The_Netherlands_compared_to_sealevel.png" alt="Les Pays-Bas comparés au niveau de la mer">
+        <div class="image-overlay">🖥️ Cliquez pour agrandir</div>
+      </div>
+      <div class="image-card" onclick="openImageModal('Netherlands_Population_Density_and_Low_Elevation_Coastal_Zones_(5457306871).jpg')">
+        <img src="Netherlands_Population_Density_and_Low_Elevation_Coastal_Zones_(5457306871).jpg" alt="Densité de population et zones côtières basses">
+        <div class="image-overlay">🖥️ Cliquez pour agrandir</div>
+      </div>
     </div>
 
     <!-- Section Transcription Collapsible -->
@@ -235,6 +370,21 @@
   <div class="modal-content-video">
     <span class="close-modal" onclick="closeFullscreenVideo()">&times;</span>
     <iframe src="https://www.youtube.com/embed/FjoACGQNxWc?cc_load_policy=1" allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" loading="lazy"></iframe>
+  </div>
+</div>
+
+<!-- Modals pour les images -->
+<div id="imageModal1" class="modal-image">
+  <div class="modal-content-image">
+    <span class="close-modal-image" onclick="closeImageModal('imageModal1')">&times;</span>
+    <img src="The_Netherlands_compared_to_sealevel.png" alt="Les Pays-Bas comparés au niveau de la mer">
+  </div>
+</div>
+
+<div id="imageModal2" class="modal-image">
+  <div class="modal-content-image">
+    <span class="close-modal-image" onclick="closeImageModal('imageModal2')">&times;</span>
+    <img src="Netherlands_Population_Density_and_Low_Elevation_Coastal_Zones_(5457306871).jpg" alt="Densité de population et zones côtières basses">
   </div>
 </div>
 
@@ -361,6 +511,34 @@ function suivante() {
   indexQ++;
   setTimeout(() => afficherQuestion(), 2000);
 }
+
+// Gestion des modals d'images
+function openImageModal(imagePath) {
+  if (imagePath === 'The_Netherlands_compared_to_sealevel.png') {
+    document.getElementById('imageModal1').classList.add('active');
+  } else if (imagePath === 'Netherlands_Population_Density_and_Low_Elevation_Coastal_Zones_(5457306871).jpg') {
+    document.getElementById('imageModal2').classList.add('active');
+  }
+}
+
+function closeImageModal(modalId) {
+  document.getElementById(modalId).classList.remove('active');
+}
+
+// Fermer les modals en cliquant en dehors
+document.addEventListener('DOMContentLoaded', function() {
+  document.getElementById('imageModal1').addEventListener('click', function(e) {
+    if (e.target === this) {
+      this.classList.remove('active');
+    }
+  }, { passive: true });
+
+  document.getElementById('imageModal2').addEventListener('click', function(e) {
+    if (e.target === this) {
+      this.classList.remove('active');
+    }
+  }, { passive: true });
+});
 
 // Plein écran vidéo
 function openFullscreenVideo() {
